final fixes for lab 5

--- a/Lab 5/Lab5MinMax.ipynb
+++ b/Lab 5/Lab5MinMax.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
     "\n",
     "    winning_lines = [(0,1,2), (3,4,5), (6,7,8), \n",
     "                     (0,3,6), (1,4,7), (2,5,8), \n",
-    "                     (0,4,8), (2,4,8)\n",
+    "                     (0,4,8), (2,4,6)\n",
     "                     ]\n",
     "    \n",
     "\n",
@@ -100,13 +100,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function to check for a draw\n",
     "def check_draw(board):\n",
-    "    return check_win(board, \"X\") == check_win(board, \"O\") == False and all(cell != \" \" for cell in board)"
+    "    return check_win(board, \"X\") == check_win(board, \"O\") and all(cell != \" \" for cell in board)"
    ]
   },
   {
@@ -126,12 +126,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function for the minimax algorithm\n",
-    "def minimax(board, depth, maximizing_player):\n",
+    "def minimax(board, depth, maximizing_player, max_depth):\n",
+    "\n",
+    "    if(max_depth!= None and depth == max_depth):\n",
+    "        return 0\n",
+    "\n",
     "    # Base cases: check for terminal states\n",
     "    if check_win(board, \"O\"): # AI Wins\n",
     "        return 10 - depth # Higher estimates will be chosen so good endings will come sooner\n",
@@ -139,6 +143,8 @@
     "        return -10 + depth # Least negative  estimates will be chosen so bad endings are delayed\n",
     "    if check_draw(board):\n",
     "        return 0\n",
+    "    \n",
+    "    \n",
     "\n",
     "    if maximizing_player:\n",
     "        # AI Strategy\n",
@@ -146,7 +152,7 @@
     "        for i in range (9):\n",
     "            if board[i] == \" \":\n",
     "                board[i] = \"O\"\n",
-    "                eval_i = minimax(board, depth + 1, False)\n",
+    "                eval_i = minimax(board, depth + 1, False, max_depth)\n",
     "                board[i] = \" \"\n",
     "                best_eval = max(best_eval, eval_i)\n",
     "        return best_eval\n",
@@ -157,7 +163,7 @@
     "        for i in range (9):\n",
     "            if board[i] == \" \":\n",
     "                board[i] = \"X\"\n",
-    "                eval_i = minimax(board, depth + 1, True)\n",
+    "                eval_i = minimax(board, depth + 1, True, max_depth)\n",
     "                board[i] = \" \"\n",
     "                best_eval = min(best_eval, eval_i)\n",
     "        return best_eval"
@@ -174,11 +180,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def minimaxAB(board, depth, maximizing_player, alpha, beta):\n",
+    "def minimaxAB(board, depth, maximizing_player, alpha, beta, max_depth):\n",
+    "\n",
+    "    if(max_depth != None and depth == max_depth):\n",
+    "        return 0\n",
+    "\n",
     "    # Terminal scoring (prefer faster wins, delay losses)\n",
     "    if check_win(board, \"O\"):\n",
     "        return 10 - depth\n",
@@ -187,12 +197,14 @@
     "    if check_draw(board):\n",
     "        return 0\n",
     "\n",
+    "    \n",
+    "    \n",
     "    if maximizing_player:  # AI (\"O\")\n",
     "        value = -math.inf\n",
     "        for i in range(9):\n",
     "            if board[i] == \" \":\n",
     "                board[i] = \"O\"\n",
-    "                value = max(value, minimaxAB(board, depth + 1, False, alpha, beta))\n",
+    "                value = max(value, minimaxAB(board, depth + 1, False, alpha, beta, max_depth))\n",
     "                board[i] = \" \"\n",
     "                alpha = max(alpha, value)\n",
     "                if beta <= alpha:  # prune\n",
@@ -203,7 +215,7 @@
     "        for i in range(9):\n",
     "            if board[i] == \" \":\n",
     "                board[i] = \"X\"\n",
-    "                value = min(value, minimaxAB(board, depth + 1, True, alpha, beta))\n",
+    "                value = min(value, minimaxAB(board, depth + 1, True, alpha, beta, max_depth))\n",
     "                board[i] = \" \"\n",
     "                beta = min(beta, value)\n",
     "                if beta <= alpha:  # prune\n",
@@ -213,19 +225,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 491,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function to find the best move using the minimax algorithm\n",
     "import math\n",
-    "def best_move(board, depth):\n",
+    "def best_move(board,max_depth):\n",
     "    best_eval = float(\"-inf\")\n",
     "    best_move = -1\n",
     "    for i in range(9):\n",
     "        if board[i] == \" \":\n",
     "            board[i] = \"O\"\n",
-    "            evaluation = minimax(board, depth, False) #or minimax(board, 0, False, -math.inf, math.inf)\n",
+    "            evaluation = minimax(board, 0, False, max_depth) #or minimax(board, 0, False, -math.inf, math.inf)\n",
     "            board[i] = \" \"\n",
     "            if evaluation > best_eval:\n",
     "                best_eval = evaluation\n",
@@ -235,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,11 +274,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def play_game(randomPlayer: bool, depth):\n",
+    "def play_game(randomPlayer: bool, max_depth: int):\n",
     "    while True:\n",
     "        display_board(board)\n",
     "\n",
@@ -283,7 +295,7 @@
     "            print(\"You win!\")\n",
     "            break\n",
     "        \n",
-    "        ai_move = best_move(board, depth)\n",
+    "        ai_move = best_move(board, max_depth)\n",
     "        board[ai_move] = \"O\"\n",
     "        \n",
     "        if check_win(board, \"O\"):\n",
@@ -306,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -342,33 +354,45 @@
       "\n",
       "--------------------\n",
       "\n",
-      "O |   |  \n",
-      "---------\n",
-      "  |   | X\n",
-      "---------\n",
-      "  |   |  \n",
-      "\n",
-      "--------------------\n",
-      "\n",
-      "O |   |  \n",
-      "---------\n",
-      "X | O | X\n",
-      "---------\n",
-      "  |   |  \n",
-      "\n",
-      "--------------------\n",
-      "\n",
       "O | X |  \n",
       "---------\n",
-      "X | O | X\n",
+      "  |   |  \n",
       "---------\n",
-      "  |   | O\n",
+      "  |   |  \n",
+      "\n",
+      "--------------------\n",
+      "\n",
+      "O | X | X\n",
+      "---------\n",
+      "O |   |  \n",
+      "---------\n",
+      "  |   |  \n",
+      "\n",
+      "--------------------\n",
+      "\n",
+      "O | X | X\n",
+      "---------\n",
+      "O |   |  \n",
+      "---------\n",
+      "O |   | X\n",
       "AI wins!\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "play_game() missing 1 required positional argument: 'max_depth'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[57], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m play_game(\u001b[38;5;28;01mTrue\u001b[39;00m, max_depth\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m play_game(\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: play_game() missing 1 required positional argument: 'max_depth'"
      ]
     }
    ],
    "source": [
-    "play_game(True, 5)"
+    "play_game(True, max_depth=3)\n",
+    "play_game(True, None)"
    ]
   }
  ],
@@ -379,7 +403,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "ai_labs_env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -393,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
