--- a/Lab 5/Lab5MinMax.ipynb
+++ b/Lab 5/Lab5MinMax.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,8 +196,6 @@
     "        return -10 + depth\n",
     "    if check_draw(board):\n",
     "        return 0\n",
-    "\n",
-    "    \n",
     "    \n",
     "    if maximizing_player:  # AI (\"O\")\n",
     "        value = -math.inf\n",
@@ -225,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,10 +282,12 @@
     "\n",
     "        player_move = select_next_move(board, randomPlayer)\n",
     "        \n",
-    "        if board[player_move] != \" \":\n",
-    "            print(\"Invalid move. Try again.\")\n",
-    "            continue\n",
-    "        \n",
+    "\n",
+    "        if player_move == -1:  # no legal moves left\n",
+    "            display_board(board)\n",
+    "            print(\"It's a draw!\")\n",
+    "            break\n",
+    "\n",
     "        board[player_move] = \"X\"\n",
     "        \n",
     "        if check_win(board, \"X\"):\n",
@@ -296,8 +296,12 @@
     "            break\n",
     "        \n",
     "        ai_move = best_move(board, max_depth)\n",
+    "        if ai_move == -1:  # no legal moves left\n",
+    "            display_board(board)\n",
+    "            print(\"It's a draw!\")\n",
+    "            break\n",
     "        board[ai_move] = \"O\"\n",
-    "        \n",
+    "\n",
     "        if check_win(board, \"O\"):\n",
     "            display_board(board)\n",
     "            print(\"AI wins!\")\n",
@@ -318,25 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# play_game(False, 0)\n",
-    "\n",
-    "# play_game(True, 0)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Modify the minimax method so that it uses the depth parameter. Test how a depth of 3 compares to a player than can make moves until the game is over."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -354,45 +340,41 @@
       "\n",
       "--------------------\n",
       "\n",
-      "O | X |  \n",
-      "---------\n",
-      "  |   |  \n",
-      "---------\n",
-      "  |   |  \n",
-      "\n",
-      "--------------------\n",
-      "\n",
-      "O | X | X\n",
-      "---------\n",
       "O |   |  \n",
       "---------\n",
       "  |   |  \n",
+      "---------\n",
+      "  | X |  \n",
       "\n",
       "--------------------\n",
       "\n",
-      "O | X | X\n",
+      "O | O |  \n",
       "---------\n",
-      "O |   |  \n",
+      "  |   | X\n",
       "---------\n",
-      "O |   | X\n",
+      "  | X |  \n",
+      "\n",
+      "--------------------\n",
+      "\n",
+      "O | O | O\n",
+      "---------\n",
+      "X |   | X\n",
+      "---------\n",
+      "  | X |  \n",
       "AI wins!\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "play_game() missing 1 required positional argument: 'max_depth'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[57], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m play_game(\u001b[38;5;28;01mTrue\u001b[39;00m, max_depth\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m play_game(\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: play_game() missing 1 required positional argument: 'max_depth'"
      ]
     }
    ],
    "source": [
-    "play_game(True, max_depth=3)\n",
-    "play_game(True, None)"
+    "play_game(True, 1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Modify the minimax method so that it uses the depth parameter. Test how a depth of 3 compares to a player than can make moves until the game is over."
    ]
   }
  ],
@@ -403,7 +385,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "ai_labs_env",
    "language": "python",
    "name": "python3"
   },
@@ -417,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
