--- a/Labs/Lab 6/Lab6_AI_CSP.ipynb
+++ b/Labs/Lab 6/Lab6_AI_CSP.ipynb
@@ -30,13 +30,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Useful libraries:\n",
     "from copy import deepcopy\n",
-    "from itertools import combinations"
+    "from itertools import combinations\n",
+    "from typing import TypeVar, Callable, Sequence, TypeAlias\n",
+    "\n",
+    "K = TypeVar(\"Key\")\n",
+    "V = TypeVar(\"Value\")\n",
+    "Predicate: TypeAlias = Callable[Sequence[K], bool]\n",
+    "Constraint: TypeAlias = list[tuple[list[K],Predicate]]"
    ]
   },
   {
@@ -80,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -150,13 +156,13 @@
        " (['France', 'Loux'], <function __main__.<lambda>(a, b)>)]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def get_constraints(var, constraints):\n",
+    "def get_constraints(var: K, constraints: list[Constraint]) -> list[Constraint]:\n",
     "    \"\"\"Return constraints that involve the given variable.\"\"\"\n",
     "    out = []\n",
     "    for vs, f in constraints:\n",
@@ -178,22 +184,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(['France', 'Belgium'], <function <lambda> at 0x74bb017db100>)]\n",
-      "[(['A', 'C'], <function <lambda> at 0x74bb017d9d00>), (['C'], <function <lambda> at 0x74bb017db6a0>), (['A'], <function <lambda> at 0x74bb017db740>)]\n",
-      "[(['France', 'Belgium'], <function <lambda> at 0x74bb017db100>)]\n",
-      "[(['A', 'C'], <function <lambda> at 0x74bb017d9d00>), (['C'], <function <lambda> at 0x74bb017db6a0>), (['A'], <function <lambda> at 0x74bb017db740>)]\n"
+      "[(['France', 'Belgium'], <function <lambda> at 0x76fe6f7f9760>)]\n",
+      "[(['A', 'C'], <function <lambda> at 0x76fe6f7fa480>), (['C'], <function <lambda> at 0x76fe6f7fafc0>), (['A'], <function <lambda> at 0x76fe6f7fb060>)]\n"
      ]
     }
    ],
    "source": [
-    "def fixed_constraints(solution, constraints):\n",
+    "def fixed_constraints(solution: dict[K,V], constraints: list[Constraint]) -> list[Constraint]:\n",
     "    \"\"\"Return only those constraints whose variables are ALL assigned in the solution.\"\"\"\n",
     "    assigned = set(solution.keys())\n",
     "    out = []\n",
@@ -201,10 +205,6 @@
     "        if set(vs).issubset(assigned):\n",
     "            out.append((vs, f))\n",
     "    return out\n",
-    "\n",
-    "print(fixed_constraints({\"France\": \"blue\", \"Belgium\": \"green\"}, ConstraintsC)) # => [(['France', 'Belgium'], ...)]\n",
-    "print(fixed_constraints({\"A\": \"1\", \"C\": \"2\"}, ConstraintsA)) # => [(['A', 'C'], ...), (['C'], ...), (['A'], ...)]\n",
-    "\n",
     "\n",
     "print(fixed_constraints({\"France\": \"blue\", \"Belgium\": \"green\"}, ConstraintsC)) # => [(['France', 'Belgium'], ...)]\n",
     "print(fixed_constraints({\"A\": \"1\", \"C\": \"2\"}, ConstraintsA)) # => [(['A', 'C'], ...), (['C'], ...), (['A'], ...)]"
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
     }
    ],
    "source": [
-    "def check_constraint(solution, constraint):\n",
+    "def check_constraint(solution: dict[K,V], constraint: Constraint) -> bool:\n",
     "    \"\"\"Evaluate the constraint predicate on values from solution (in the same var order).\"\"\"\n",
     "    vs, pred = constraint\n",
     "    args = [solution[v] for v in vs]\n",
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -303,18 +303,19 @@
     }
    ],
    "source": [
-    "from copy import deepcopy  # make sure this import is present\n",
     "\n",
-    "def PCSP(vars, domains, constraints, acceptable_cost, solution, cost):\n",
+    "\n",
+    "def PCSP(vars: list[K], domains: dict[K,list[V]], constraints: list[Constraint], acceptable_cost: int, solution: dict[K,V], cost: int) -> bool:\n",
     "    global best_solution\n",
     "    global best_cost\n",
     "    if not vars:\n",
     "        # If there are no more variables, we have reached a better solution\n",
     "        print(\"New best: \" + str(cost) + \" - \" + str(solution))\n",
-    "        best_solution = solution\n",
+    "        best_solution = solution.copy()\n",
     "        best_cost = cost\n",
-    "        return best_cost <= acceptable_cost\n",
     "\n",
+    "        return best_cost <= acceptable_cost\n",
+    "    \n",
     "    elif not domains[vars[0]]:\n",
     "        # If there are no more values in the domains, the searching process ends\n",
     "        return False\n",
@@ -322,33 +323,40 @@
     "        # If we have already reached a cost identical with the one of the best solution, we will not go any further\n",
     "        return False\n",
     "    else:\n",
-    "        # Choose the first variable\n",
-    "        var = vars[0]\n",
+    "        # TODO: Choose the first variable and the first value in the domains (and remove it from domain)\n",
+    "        first_var = vars[0]\n",
+    "        first_val = domains[first_var][0]\n",
     "\n",
-    "        # Try all values for this variable, always taking the first remaining and removing it\n",
-    "        while domains[var]:\n",
-    "            val = domains[var].pop(0)  # choose first value and remove it\n",
+    "        rest_domains = deepcopy(domains)\n",
+    "        rest_domains[first_var] = domains[first_var][1:]\n",
     "\n",
-    "            # Build the new solution\n",
-    "            new_solution = dict(solution)\n",
-    "            new_solution[var] = val\n",
+    "        # TODO: Build the new solution\n",
+    "        new_solution = {}\n",
+    "        for k in domains.keys():\n",
+    "            if k == first_var:\n",
+    "                new_solution[k] = first_val\n",
+    "            elif k in solution:\n",
+    "                new_solution[k] = solution[k]\n",
     "\n",
-    "            # We get the list of constraints that can be evaluated\n",
-    "            fixed = fixed_constraints(new_solution, constraints)\n",
+    "        # TODO: We get the list of constraints that can be evaluated\n",
+    "        applicable_constraints = fixed_constraints(new_solution, constraints)\n",
     "\n",
-    "            # We compute the cost of the new partial solution (each violated constraint = 1)\n",
-    "            new_cost = sum(not check_constraint(new_solution, c) for c in fixed)\n",
+    "        # TODO: We compute the cost of the new partial solution (each constraint ignored = 1)\n",
+    "        ignored_constraints = [constraint for constraint in applicable_constraints if not check_constraint(new_solution, constraint)]\n",
+    "        new_cost = len(ignored_constraints)\n",
     "\n",
-    "            # We check if the new cost is lower than the best cost\n",
-    "            if new_cost < best_cost:\n",
-    "                # If the new cost is lower than the best known, solve for the rest of the variables\n",
-    "                if PCSP(vars[1:], deepcopy(domains), constraints, acceptable_cost, new_solution, new_cost):\n",
-    "                    # If the recursive call returns True, a good enough solution has been found\n",
-    "                    return True\n",
-    "        \n",
-    "        # Check for the rest of the values: handled by the loop above; none worked\n",
-    "        return False\n",
+    "        # We check if the new cost is lower than the best cost\n",
+    "        if new_cost < best_cost:\n",
+    "            # TODO:\n",
+    "            # If the new cost is lower than the best known, we solve for the rest of the variables\n",
+    "            # If the recursive call returns True, a good enough solution has been found, so we return True\n",
     "\n",
+    "            if(PCSP(vars[1:], deepcopy(rest_domains), constraints, acceptable_cost, new_solution, new_cost)):\n",
+    "                return True\n",
+    "            \n",
+    "        # Check for the rest of the values\n",
+    "        # TODO:\n",
+    "        return PCSP(vars, deepcopy(rest_domains), constraints, acceptable_cost, solution, cost)\n",
     "    \n",
     "# A wrapper that instantiates global variables\n",
     "def run_pcsp(problem, acceptable_cost):\n",
