--- a/Labs/Lab 6/Lab6_AI_CSP.ipynb
+++ b/Labs/Lab 6/Lab6_AI_CSP.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        " (['France', 'Loux'], <function __main__.<lambda>(a, b)>)]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,15 +184,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(['France', 'Belgium'], <function <lambda> at 0x76fe6f7f9760>)]\n",
-      "[(['A', 'C'], <function <lambda> at 0x76fe6f7fa480>), (['C'], <function <lambda> at 0x76fe6f7fafc0>), (['A'], <function <lambda> at 0x76fe6f7fb060>)]\n"
+      "[(['France', 'Belgium'], <function <lambda> at 0x7d266646e5c0>)]\n",
+      "[(['A', 'C'], <function <lambda> at 0x7d266646f920>), (['C'], <function <lambda> at 0x7d266646fec0>), (['A'], <function <lambda> at 0x7d266646ff60>)]\n"
      ]
     }
    ],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -325,25 +325,20 @@
     "    else:\n",
     "        # TODO: Choose the first variable and the first value in the domains (and remove it from domain)\n",
     "        first_var = vars[0]\n",
-    "        first_val = domains[first_var][0]\n",
-    "\n",
+    "        first_val = domains[first_var].pop(0)\n",
+    "        \n",
     "        rest_domains = deepcopy(domains)\n",
-    "        rest_domains[first_var] = domains[first_var][1:]\n",
-    "\n",
+    "    \n",
     "        # TODO: Build the new solution\n",
-    "        new_solution = {}\n",
-    "        for k in domains.keys():\n",
-    "            if k == first_var:\n",
-    "                new_solution[k] = first_val\n",
-    "            elif k in solution:\n",
-    "                new_solution[k] = solution[k]\n",
+    "        new_solution = deepcopy(solution)\n",
+    "        new_solution[first_var] = first_val\n",
     "\n",
     "        # TODO: We get the list of constraints that can be evaluated\n",
-    "        applicable_constraints = fixed_constraints(new_solution, constraints)\n",
+    "        var_specific_applicable_constraints = fixed_constraints(deepcopy(new_solution), get_constraints(first_var, constraints))\n",
     "\n",
     "        # TODO: We compute the cost of the new partial solution (each constraint ignored = 1)\n",
-    "        ignored_constraints = [constraint for constraint in applicable_constraints if not check_constraint(new_solution, constraint)]\n",
-    "        new_cost = len(ignored_constraints)\n",
+    "        ignored_constraints = [constraint for constraint in var_specific_applicable_constraints if not check_constraint(deepcopy(new_solution), constraint)]\n",
+    "        new_cost = cost + len(ignored_constraints)\n",
     "\n",
     "        # We check if the new cost is lower than the best cost\n",
     "        if new_cost < best_cost:\n",
