--- a/Labs/Lab 8/SupervisedLearning.ipynb
+++ b/Labs/Lab 8/SupervisedLearning.ipynb
@@ -25740,7 +25740,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "ai_labs_env",
    "language": "python",
    "name": "python3"
   },
@@ -25754,7 +25754,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
