added explanations for task 0

--- a/Labs/Lab 9/Lab_AI_Unsupervised Learning_Skel.ipynb
+++ b/Labs/Lab 9/Lab_AI_Unsupervised Learning_Skel.ipynb
@@ -756,15 +756,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 456,
-   "metadata": {
-    "id": "q2O8QfF2vNRR",
-    "outputId": "6d3a634e-99a4-45be-a8db-a8b7f99e54fa"
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# Expected plot for TO DO2"
+    "The first scatter plot shows many tight clouds of points with gaps between them.\n",
+    "This suggests that the data naturally forms groups and that clustering should work well.\n",
+    "\n",
+    "With Agglomerative Clustering using affinity=\"euclidean\" and linkage=\"ward\", the algorithm finds compact, rounded clusters.\n",
+    "The different clouds are separated cleanly and most clusters have a similar size.\n",
+    "\n",
+    "With affinity=\"euclidean\" and linkage=\"complete\", the clusters are still reasonable but are more sensitive to distant points, because complete linkage uses the farthest distance between clusters.\n",
+    "Some clusters become slightly larger or more stretched.\n",
+    "\n",
+    "With affinity=\"manhattan\" and linkage=\"complete\", the distance is measured along the axes.\n",
+    "The overall grouping is similar, but some clusters change shape and size a bit.\n",
+    "\n",
+    "Ward linkage only supports Euclidean distance, so the combination linkage=\"ward\" with affinity=\"manhattan\" is not valid and raises an error."
    ]
   },
   {
@@ -875,15 +882,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 459,
-   "metadata": {
-    "id": "aYyCxYGbvNRT",
-    "outputId": "201b22ee-75c8-4675-a880-9616f4f55639"
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# Expected Output:"
+    "The Nearest Centroid model gives one center point for each cluster.\n",
+    "Each centroid is the average position of all points in that cluster.\n",
+    "\n",
+    "In the final plot, points in the same cluster share a color and each centroid is shown by a cross.\n",
+    "The centroids sit near the middle of the dense part of each cloud, which means the clusters and their centers match the structure of the data well."
    ]
   },
   {
